gitops/apps/kafka-cluster/kafka-exporter-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-exporter
  namespace: kafka
  labels:
    app.kubernetes.io/name: kafka-exporter
spec:
  selector:
    strimzi.io/cluster: cledyu-kafka
    strimzi.io/component-type: kafka-exporter
  ports:
    - name: tcp-prometheus
      port: 9404
      targetPort: 9404
      protocol: TCP
