gitops/apps/kafka-cluster/kafka-metrics-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-metrics
  namespace: kafka
  labels:
    app.kubernetes.io/name: kafka-metrics
spec:
  clusterIP: None
  selector:
    strimzi.io/cluster: cledyu-kafka
    strimzi.io/component-type: kafka
  ports:
    - name: tcp-prometheus
      port: 9404
      targetPort: 9404
      protocol: TCP
